--- a/ImageColorizer.ipynb
+++ b/ImageColorizer.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from deoldify.visualize import *\n",
+    "from colourizer.visualize import *\n",
     "plt.style.use('dark_background')\n",
     "torch.backends.cudnn.benchmark=True"
    ]
